[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "testing_containers"
description = "Project to show integration tests with containerized dependencies"
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
